cabal-version:      3.4
name:               retab
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    ghc-options: -Wall
    exposed-modules: Retab
    -- other-modules:
    -- other-extensions:
    build-depends:
      , base >=4.17.2.1
      , byteslice >=0.2.11
      , primitive >=0.9
    hs-source-dirs:   src
    default-language: GHC2021
